force-app/main/default/objects/hed_Time_Table_Line_Item__c/hed_Time_Table_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Time Table Line Item</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Table Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>