force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Time Table Line Items</relationshipLabel>
    <relationshipName>Time_Table_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>