force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/hed_Date__c.field-meta.xml
<CustomField>
    <fullName>hed_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>