force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/hed_End_Time__c.field-meta.xml
<CustomField>
    <fullName>hed_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>