force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/hed_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>hed_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>