force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/IA__c.field-meta.xml
<CustomField>
    <fullName>IA__c</fullName>
    <formula>TEXT(Reva_Exam_Notification__r.hed_IA_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA Type</label>
    <type>Text</type>
</CustomField>