force-app/main/default/objects/hed_Time_Table_Line_Item__c/fields/Reva_Exam_Notification__c.field-meta.xml
<CustomField>
    <fullName>Reva_Exam_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IA Notification</label>
    <referenceTo>Rve_Exam_Notification__c</referenceTo>
    <relationshipLabel>Time Table Line Items</relationshipLabel>
    <relationshipName>Time_Table_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>