force-app/main/default/objects/hed_Time_Table_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>hed_Start_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>hed_Date__c</columns>
    <columns>hed_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>hed_Date__c</field>
        <operation>equals</operation>
        <value>9/18/2024</value>
    </filters>
    <label>All</label>
</ListView>